<?xml version="1.0"?>
<package format="2">
  <name>pose_graph_utils</name>
  <version>0.0.1</version>
  <description>The pose graph utils package</description>

  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>
  <author email="yoshua@kth.se">Yoshua Nava</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>g2o_catkin</depend>
  <depend>gtsam_catkin</depend>

</package>
